# la-famille

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile.runtime  Makefile  README.md  docker-compose.yml  family.schema.json  registry.json
context-bus/migrations/: 001_initial.sql
crates/openclaw-context-bus/: Cargo.toml
crates/openclaw-context-bus/src/: claims.rs  decay.rs  lib.rs  namespace.rs  query.rs
crates/openclaw-council/: Cargo.toml
crates/openclaw-council/src/: convergence.rs  lib.rs  protocol.rs  session.rs
crates/openclaw-genesis/: Cargo.toml
crates/openclaw-genesis/src/: compose_gen.rs  identity_converter.rs  lib.rs  scaffold.rs
crates/openclaw-lifecycle/: Cargo.toml
crates/openclaw-lifecycle/src/: death.rs  lib.rs  phases.rs  regency.rs
families/_template/: README.md  family.json.template
families/_template/agent/: IDENTITY.md.template  SOUL.md.template
families/biblio/biblio/: IDENTITY.md  SOUL.md
families/biblio/data/: README.md  bookmarks.json  collections.json
families/genesis/architecte/: IDENTITY.md  SOUL.md  agent.toml
families/genesis/forgeron/: IDENTITY.md  SOUL.md  agent.toml
families/genesis/scribe/: IDENTITY.md  SOUL.md  agent.toml
families/openclaw/: LIFECYCLE.md  REGISTRY.md  family.toml
families/openclaw/blaise/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  agent.toml  config.toml
families/openclaw/blaise/workspace/state/: memory_hygiene_state.json
families/openclaw/cemetery/yann/: EPITAPH.md  LEGACY.md
families/openclaw/collective_memory/: claims.jsonl
families/openclaw/henry/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  agent.toml  config.toml
families/openclaw/henry/memory/: 2026-01-31.md  2026-02-01.md  2026-02-04.md  2026-02-06.md  2026-02-14-conseil-marche-newsletters-fr.md  2026-02-17-position-canaux-newsletters.md
families/openclaw/henry/workspace/state/: memory_hygiene_state.json
families/openclaw/maman/: AGENTS.md  COUNCIL.md  IDENTITY.md  MEMORY.md  SOUL.md  agent.toml  config.toml
families/openclaw/maman/memory/: 2025-02-05.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-08.md  2026-02-09.md  2026-02-11.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-17.md
families/openclaw/maman/memory/gas-morning-brief/: state.json
families/openclaw/maman/memory/shared/: openrouter-free-models.md
families/openclaw/maman/workspace/state/: memory_hygiene_state.json
families/openclaw/memory/shared/: FALLBACK.json  README.md  agent-corrections.md  contacts.md  council-conversation-proposal.md  decisions.md  deep-work.md  lecons-techniques.md  openrouter-free-models.md  preferences-papa.md  topics-du-jour.md
families/openclaw/nova/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  agent.toml  auth-profiles.json  config.toml
families/openclaw/nova/.zeroclaw/: auth-profiles.json
families/openclaw/nova/memory/: 2026-02-04.md
families/openclaw/nova/workspace/state/: memory_hygiene_state.json
families/openclaw/sage/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  agent.toml  config.toml
families/openclaw/sage/workspace/state/: memory_hygiene_state.json
gateway/: Cargo.toml  Dockerfile
gateway/src/: context_api.rs  council_api.rs  family_router.rs  main.rs  routes.rs
scripts/: build-agents.sh  convert-soul-to-aieos.py  gemini-oauth-refresh.md  migrate-openclaw.sh
ui/: next.config.ts
ui/src/components/context/: claims-viewer.tsx  context-browser.tsx  trajectory-viewer.tsx
ui/src/components/councils/: council-round.tsx  council-viewer.tsx
ui/src/stores/: backend-store.ts
