[workspace]
resolver = "2"
members = [
    "crates/openclaw-council",
    "crates/openclaw-context-bus",
    "crates/openclaw-lifecycle",
    "crates/openclaw-genesis",
    "gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bacoco/la-famille"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
