[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Central gateway for la-famille - routes requests to ZeroClaw agent instances"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

openclaw-context-bus = { path = "../crates/openclaw-context-bus" }
openclaw-council = { path = "../crates/openclaw-council" }
