[package]
name = "openclaw-context-bus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared SQLite context bus for multi-agent memory, claims, and trajectories"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
