[package]
name = "openclaw-council"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "COUNCIL protocol implementation - multi-round deliberation for AI agent families"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
