[package]
name = "openclaw-genesis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Genesis factory - scaffold new agent families from templates"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
