[package]
name = "openclaw-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent lifecycle management - birth, death, promotion, and regency"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
